added some changes to dropdown menu

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -140,6 +140,7 @@ body {
       }
 
       .select-menu-el {
+        cursor: pointer;
         font-size: 1.1rem;
         padding: 0.5rem 0;
         transition: scale 0.1s;
